feat: implement connect protocal practice with kotlin